# lsf

./: .gitignore  Justfile  README.md  human-spec-template.md  layer2-derivation-instruction.md  main.py  package-lock.json  plan-react-fe.md  pyproject.toml  requirements-template.md  test-cases-template.md  todo_human.md
.claude/commands/: breakdown.md  check-data-plane.md  complexity-gate.md  coupling-check.md  dependency-check.md  discriminate-green.md  discriminate-layer2.md  epic.md  (+22 more)
archive/: architecture-boundaries.md  layer3-implementation-plan.md
automation/: agent-automation-sketch.md  implementation-plan.md  test-integration-detailed-plan-v2.md  test-integration-detailed-plan.md  test-integration-plan.md
docs/: README.md  claude-commands.md  command-quick-reference.md  command-usage-guide.md  commands.md  factory-instructions.md  getting-started.md  lsf-corrected-workflow.md  workflow-integration-patterns.md  workflow.md
factory/: __init__.py  cli.py  command_agent.py  orchestrator.py  result.py  state.py
lsf/: __init__.py  cli.py
specs/: data-plane-target.yaml  green-phase.md  human-spec-basic-login.md  human-spec-login.md  nonfunctional-requirements.yaml  red-phase.md  requirements.md  test-cases.md
src/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  nginx.conf  requirements.txt  test_endpoints.py
tests/: README.md  __init__.py  run_all_tests.sh  run_all_tests_parallelized.py  test-registry.json  test_api_integration.py  test_docker_build.py  test_docker_runtime.py  test_init.py  test_init_v2.py  test_service_health.py
(+172 files in other folders)
